# jsonschema2shacl

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pypi.yml  run_test.yml
example/: array.json  array.json.shape.ttl  dependentRequired.json  dependentRequired.json.shape.ttl  if.json  if.json.shape.ttl  logical.json  ref.json  resume.json  resume_shape.ttl  test.json  test.json.shape.ttl  test_output.ttl
src/: __main__.py  constants.py  file_parser.py  json_schema_to_shacl.py  main.py  utils.py
src/jsonschema2shacl/: __main__.py  constants.py  json_schema_to_shacl.py  utils.py
test/1-SimpleType/: mapping.json  test_1simpletype.py  test_shape.ttl
test/10-item/: mapping.json  test_10item.py
test/11-prefixItems/: test_11prefixitems.py  test_shape.ttl
test/12-unevaluatedItems/: test_12unevaluateditems.py  test_shape.ttl
test/13-contains/: test_13contains.py  (+1 more)
usecases/: 10-item.json.shape.ttl  11-prefixItems.json  11-prefixItems.json.shape.ttl  12-unevaluatedItems.json  13-contains.json  14-uniqueItems.json  15-boolean.json.shape.ttl  17-dependentRequired.json  17-dependentRequired.json.shape.ttl  18-refs.json.shape.ttl  19-if.json.shape.ttl  20-logicalOperators.json  21-const.json  24-exclusiveMaximum.json  25-exclusiveMinimum.json  29-minItems.json  3-ArrayType.json  3-ArrayType.json.shape.ttl  31-minContains.json  32-format.json.shape.ttl  4-Enum.json  5-pattern.json  6-additionalProperties.json  6-additionalProperties.json.shape.ttl  7-required.json.shape.ttl  9-propertyNames.json
(+63 files in other folders)
